Fixed dropdown overflow CSS rule.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -115,7 +115,6 @@ p {
   width: 100%;
 
   text-align: left;
-  overflow: hidden;
 }
 
 #logo {
